2011-01-12  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/gcd.cc (extended_gcd): Tag call to floor with gnulib::.

2011-01-12  John W. Eaton  <jwe@octave.org>

	* oct-hist.cc (Fhistory_control): New function.

2011-01-12  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* oct-hist.cc (default_history_control): New function.
	(initialize_history): Pass Vhistory control to
	command_history::initialize.

2011-01-11  Konstantinos Poulios  <logari81@googlemail.com>

	* gl-render.cc (opengl_renderer::draw_axes): Improve positioning
	of titles.

2011-01-10  John W. Eaton  <jwe@octave.org>

	* ov-cell.cc (octave_cell::print_as_scalar): Always return true.
	(octave_cell::print_raw): Handle extra newlines here.
	* ov-struct.cc (Fstruct_levels_to_print): Move here from pr-output.cc
	(Vstruct_levels_to_print): Move here from pr-output.cc.  Now static.
	(Vprint_struct_array_contents): New static variable.
	(Fprint_struct_array_contents): New function.
	(octave_struct::print_raw): Use Vprint_struct_array_contents.
	Simplify and improve output.
	(octave_scalar_struct::print_raw): Simplify and improve output.
	* pr-output.h (Vstruct_levels_to_print): Delete decl.
	* ov-class.cc (octave_class::print_raw): Don't unwind_protect
	Vstruct_levels_to_print.

2011-01-09  David Bateman  <dbateman@free.fr>

	* ls-mat5.cc (save_mat5_array_length (const float*, octave_idx_type,
        bool)): Take in to account the short tags for single data elements.
	(int save_mat5_element_length (const octave_value&, const std::string&,
	bool, bool)): Declare sparse matrices const to avoid a copy on read.
	* ls-utils.cc (save_type get_save_type (float, float)): New function.
	* ls-utils.h  (save_type get_save_type (float, float)): Declare it.

2011-01-09  John W. Eaton  <jwe@octave.org>

	* token.h, token.cc (token::plot_tok_typ): Delete unused enum.
	(token::token_type): Delete pttype_token from the list.
	(token::token (plot_tok_type, int, int)): Delete unused constructor.