@@ -1,5 +1,9 @@
 2011-01-12  John W. Eaton  <jwe@octave.org>
 
+	* graphics.cc (graphics_object::get_ancestor): Avoid GCC warning.
+
+2011-01-12  John W. Eaton  <jwe@octave.org>
+
 	* DLD-FUNCTIONS/gcd.cc (extended_gcd): Tag call to floor with gnulib::.
 
 2011-01-12  John W. Eaton  <jwe@octave.org>
